frontend/generated/RamParser.java
/* RamParser.java */
/* Generated By:JavaCC: Do not edit this line. RamParser.java */
    package frontend.generated;
    import java.io.FileNotFoundException;
    import visitor.*;
    import syntaxtree.*;

    public class RamParser implements RamParserConstants {
        public static void main(String[] args)
        throws ParseException, TokenMgrError, FileNotFoundException
        {
            if (args.length == 0) {
                RamParser parser = new RamParser( System.in ) ;
                parser.Goal();
            } else {
                java.io.InputStream is = new java.io.FileInputStream(new java.io.File(args[0]));
                RamParser parser = new RamParser( is ) ;
                // parser.Goal();
                Program root = parser.Goal();

                root.accept(new ASTPrintVisitor());
//                root.accept(new JavaPrintVisitor());
//                root.accept(new PythonPrintVisitor());
            }
        }

/*
void Goal() :
{}
{  
    ( RamToken() )*  <EOF> 
}

void RamToken():
{}
{
  <CLASS>  |  <IDENTIFIER> | <LBRACE> | <PUBLIC> | <STATIC> | <VOID> |
  <MAIN> | <LPAREN> | <STRING> | <LSQPAREN> | <RSQPAREN> | <RPAREN> | <RBRACE> | <EXCLAMATION> | 
  <PLUSEQUALS> | <MINUSEQUALS> | <SEMICOLON> | <RETURN> | <COMMA> | <INTEGER> | <BOOLEAN> | <ASSIGN> |
  <IF> | <ELSE> | <WHILE> | <COLON> | <PRINT> | <PRINTLN> | <AND> |
  <OR> | <LESSTHAN> | <GREATERTHAN> | <LESSTHANOREQUALS> | <GREATERTHANOREQUALS> | 
  <EQUALITY> | <NOTEQUALS> | <PLUS> | <MINUS> | <TIMES> |
  <DOT> | <LENGTH> | <INTEGER_LITERAL> | <TRUE> | <FALSE> | <THIS> | <NEW> |
  <SEMICOLON>
}
*/
  final public 
Program Goal() throws ParseException {MainClass m;
    ClassDeclList cl = new ClassDeclList();
    ClassDecl c;
    m = MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      c = ClassDecl();
cl.addElement(c);
    }
    jj_consume_token(0);
{if ("" != null) return new Program(m, cl);}
    throw new Error("Missing return statement in function");
  }

  final public MainClass MainClass() throws ParseException {Identifier i1;
    Identifier i2;
    Statement s;
    jj_consume_token(CLASS);
    jj_consume_token(IDENTIFIER);
i1 = new Identifier(token.image);
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LSQPAREN);
    jj_consume_token(RSQPAREN);
    jj_consume_token(IDENTIFIER);
i2 = new Identifier(token.image);
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    s = Statement();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
{if ("" != null) return new MainClass(i1, i2, s);}
    throw new Error("Missing return statement in function");
  }

  final public ClassDecl ClassDecl() throws ParseException {Identifier i;
    VarDeclList vl = new VarDeclList();
    MethodDeclList ml = new MethodDeclList();
    VarDecl v;
    MethodDecl m;
    jj_consume_token(CLASS);
    jj_consume_token(IDENTIFIER);
i = new Identifier(token.image);
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      v = VarDecl();
vl.addElement(v);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUBLIC:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      m = MethodDecl();
ml.addElement(m);
    }
    jj_consume_token(RBRACE);
{if ("" != null) return new ClassDeclSimple(i, vl, ml);}
    throw new Error("Missing return statement in function");
  }

  final public VarDecl VarDecl() throws ParseException {Type t;
    Identifier i;
    t = Type();
    jj_consume_token(IDENTIFIER);
i = new Identifier(token.image);
    jj_consume_token(SEMICOLON);
{if ("" != null) return new VarDecl(t, i);}
    throw new Error("Missing return statement in function");
  }

  final public MethodDecl MethodDecl() throws ParseException {Type t;
    Identifier i;
    FormalList fl = new FormalList();
    VarDeclList vl = new VarDeclList();
    VarDecl v;
    StatementList sl = new StatementList();
    Statement s;
    Exp e;
    jj_consume_token(PUBLIC);
    t = Type();
    jj_consume_token(IDENTIFIER);
i = new Identifier(token.image);
    jj_consume_token(LPAREN);
    fl = FormalList();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_4:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_4;
      }
      v = VarDecl();
vl.addElement(v);
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case PRINTLN:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_5;
      }
      s = Statement();
sl.addElement(s);
    }
    jj_consume_token(RETURN);
    e = Exp();
    jj_consume_token(SEMICOLON);
    jj_consume_token(RBRACE);
{if ("" != null) return new MethodDecl(t, i, fl, vl, sl, e);}
    throw new Error("Missing return statement in function");
  }

  final public Formal Formal() throws ParseException {Type t;
    Identifier i;
    t = Type();
    jj_consume_token(IDENTIFIER);
i = new Identifier(token.image);
{if ("" != null) return new Formal(t, i);}
    throw new Error("Missing return statement in function");
  }

  final public FormalList FormalList() throws ParseException {FormalList fl = new FormalList();
    Type t;
    Identifier i;
    Formal f;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case BOOLEAN:
    case INTEGER:
    case IDENTIFIER:{
      t = Type();
      jj_consume_token(IDENTIFIER);
i = new Identifier(token.image);
fl.addElement(new Formal(t, i));
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          break label_6;
        }
        f = FormalRest();
fl.addElement(f);
      }
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
{if ("" != null) return fl;}
    throw new Error("Missing return statement in function");
  }

  final public Formal FormalRest() throws ParseException {Type t;
    Identifier i;
    jj_consume_token(COMMA);
    t = Type();
    jj_consume_token(IDENTIFIER);
i = new Identifier(token.image);
{if ("" != null) return new Formal(t, i);}
    throw new Error("Missing return statement in function");
  }

  final public Type Type() throws ParseException {
    if (jj_2_2(3)) {
      jj_consume_token(INTEGER);
      jj_consume_token(LSQPAREN);
      jj_consume_token(RSQPAREN);
{if ("" != null) return new IntArrayType();}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BOOLEAN:{
        jj_consume_token(BOOLEAN);
{if ("" != null) return new BooleanType();}
        break;
        }
      case INTEGER:{
        jj_consume_token(INTEGER);
{if ("" != null) return new IntegerType();}
        break;
        }
      case IDENTIFIER:{
        jj_consume_token(IDENTIFIER);
{if ("" != null) return new IdentifierType(token.image);}
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Statement Statement() throws ParseException {StatementList sl = new StatementList();
    Statement s1;
    Exp e1;
    Statement s2;
    Exp e2;
    Identifier i;
    Identifier i2;
    Type t;
    ExpList el;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LBRACE:{
      jj_consume_token(LBRACE);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LBRACE:
        case IF:
        case WHILE:
        case PRINT:
        case PRINTLN:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_7;
        }
        s1 = Statement();
sl.addElement(s1);
      }
      jj_consume_token(RBRACE);
{if ("" != null) return new Block(sl);}
      break;
      }
    case IF:{
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      e1 = Exp();
      jj_consume_token(RPAREN);
      s1 = Statement();
      jj_consume_token(ELSE);
      s2 = Statement();
{if ("" != null) return new If(e1, s1, s2);}
      break;
      }
    case WHILE:{
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      e1 = Exp();
      jj_consume_token(RPAREN);
      s1 = Statement();
{if ("" != null) return new While(e1, s1);}
      break;
      }
    case PRINT:{
      jj_consume_token(PRINT);
      jj_consume_token(LPAREN);
      e1 = Exp();
      jj_consume_token(RPAREN);
      jj_consume_token(SEMICOLON);
{if ("" != null) return new Print(e1);}
      break;
      }
    case PRINTLN:{
      jj_consume_token(PRINTLN);
      jj_consume_token(LPAREN);
      e1 = Exp();
      jj_consume_token(RPAREN);
      jj_consume_token(SEMICOLON);
{if ("" != null) return new Println(e1);}
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      if (jj_2_3(2)) {
        jj_consume_token(IDENTIFIER);
i = new Identifier(token.image);
        jj_consume_token(LSQPAREN);
        e1 = Exp();
        jj_consume_token(RSQPAREN);
        jj_consume_token(ASSIGN);
        e2 = Exp();
        jj_consume_token(SEMICOLON);
{if ("" != null) return new ArrayAssign(i, e1, e2);}
      } else if (jj_2_4(2)) {
        jj_consume_token(IDENTIFIER);
i = new Identifier(token.image);
        jj_consume_token(PLUSEQUALS);
        e1 = Exp();
        jj_consume_token(SEMICOLON);
{if ("" != null) return new PlusEquals(i, e1);}
      } else if (jj_2_5(2)) {
        jj_consume_token(IDENTIFIER);
i = new Identifier(token.image);
        jj_consume_token(MINUSEQUALS);
        e1 = Exp();
        jj_consume_token(SEMICOLON);
{if ("" != null) return new MinusEquals(i, e1);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:{
          jj_consume_token(IDENTIFIER);
i = new Identifier(token.image);
          jj_consume_token(ASSIGN);
          e1 = Exp();
          jj_consume_token(SEMICOLON);
{if ("" != null) return new Assign(i, e1);}
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp Exp() throws ParseException {Exp e;
    e = OrExp();
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
  }

  final public Exp OrExp() throws ParseException {Exp e1, e2;
    e1 = AndExp();
    label_8:
    while (true) {
      if (jj_2_6(2)) {
        ;
      } else {
        break label_8;
      }
      jj_consume_token(OR);
      e2 = AndExp();
e1 = new Or(e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Exp AndExp() throws ParseException {Exp e1, e2;
    e1 = EqualityExp();
    label_9:
    while (true) {
      if (jj_2_7(2)) {
        ;
      } else {
        break label_9;
      }
      jj_consume_token(AND);
      e2 = EqualityExp();
e1 = new And(e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Exp EqualityExp() throws ParseException {Exp e1, e2;
    e1 = RelationalExp();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQUALITY:
      case NOTEQUALS:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_10;
      }
      if (jj_2_8(2)) {
        jj_consume_token(EQUALITY);
        e2 = RelationalExp();
e1 = new Equals(e1, e2);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NOTEQUALS:{
          jj_consume_token(NOTEQUALS);
          e2 = RelationalExp();
e1 = new NotEquals(e1, e2);
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Exp RelationalExp() throws ParseException {Exp e1, e2;
    e1 = AdditiveExp();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LESSTHAN:
      case GREATERTHAN:
      case LESSTHANOREQUALS:
      case GREATERTHANOREQUALS:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_11;
      }
      if (jj_2_9(2)) {
        jj_consume_token(LESSTHAN);
        e2 = AdditiveExp();
e1 = new LessThan(e1, e2);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case GREATERTHAN:{
          jj_consume_token(GREATERTHAN);
          e2 = AdditiveExp();
e1 = new GreaterThan(e1, e2);
          break;
          }
        case LESSTHANOREQUALS:{
          jj_consume_token(LESSTHANOREQUALS);
          e2 = AdditiveExp();
e1 = new LessThanOrEqualTo(e1, e2);
          break;
          }
        case GREATERTHANOREQUALS:{
          jj_consume_token(GREATERTHANOREQUALS);
          e2 = AdditiveExp();
e1 = new GreaterThanOrEqualTo(e1, e2);
          break;
          }
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Exp AdditiveExp() throws ParseException {Exp e1, e2;
    e1 = MultiplicativeExp();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        break label_12;
      }
      if (jj_2_10(2)) {
        jj_consume_token(PLUS);
        e2 = MultiplicativeExp();
e1 = new Plus(e1, e2);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case MINUS:{
          jj_consume_token(MINUS);
          e2 = MultiplicativeExp();
e1 = new Minus(e1, e2);
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Exp MultiplicativeExp() throws ParseException {Exp e1, e2;
    e1 = UnaryExp();
    label_13:
    while (true) {
      if (jj_2_11(2)) {
        ;
      } else {
        break label_13;
      }
      jj_consume_token(TIMES);
      e2 = UnaryExp();
e1 = new Times(e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Exp UnaryExp() throws ParseException {Exp e;
    boolean inNot = false;
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EXCLAMATION:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_14;
      }
      jj_consume_token(EXCLAMATION);
inNot = !inNot;
    }
    e = SuffixExp();
if (inNot)
        {if ("" != null) return new Not(e);}
      else
        {if ("" != null) return e;}
    throw new Error("Missing return statement in function");
  }

  final public Exp SuffixExp() throws ParseException {Exp e1;
    Exp e2;
    ExpList el;
    Identifier i;
    e1 = PrefixExp();
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LSQPAREN:
      case DOT:{
        ;
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        break label_15;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LSQPAREN:{
        jj_consume_token(LSQPAREN);
        e2 = Exp();
        jj_consume_token(RSQPAREN);
e1 = new ArrayLookup(e1, e2);
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        if (jj_2_12(2)) {
          jj_consume_token(DOT);
          jj_consume_token(IDENTIFIER);
i = new Identifier(token.image);
          jj_consume_token(LPAREN);
          el = ExpList();
          jj_consume_token(RPAREN);
e1 = new Call(e1, i, el);
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case DOT:{
            jj_consume_token(DOT);
            jj_consume_token(LENGTH);
e1 = new ArrayLength(e1);
            break;
            }
          default:
            jj_la1[19] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
  }
